--- a/Pages-inside/css/main.css
+++ b/Pages-inside/css/main.css
@@ -8,14 +8,14 @@
 }
 
 body {
-  background-color: #0583D2;
+  background-color: #8ab92d;
 }
 
 h1 {
   margin-bottom: 8%;
   text-align: center;
   font-family: "Fredoka One", cursive;
-  color: #0583D2;
+  color: #8ab92d;
   letter-spacing: 0.1em;
 }
 
@@ -59,7 +59,7 @@ input, button {
 }
 
 #submit, #create-acct-btn {
-  background-color: #0583D2;
+  background-color: #8ab92d;
   color: white;
   border: none;
   margin-top: 5%;
